--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -166,7 +166,7 @@
         <header id="main-header" th:fragment="mainHeader" class="header-layout">
             <div class="header-wrapper">
                 <div class="header-upper-layout">
-                    <div class="logo-wrapper"></div>
+                   <a href="/main/main"> <div class="logo-wrapper"></div></a>
                     <div class="status-wrapper">
                         <div class="button-wrapper">
                             <div class="icon-wrapper">
@@ -243,39 +243,19 @@
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">전체</div>
+                                        <a><div class="depth-category-text">전체</div></a>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">보드게임</div>
+                                        <div class="depth-category-text">시설봉사</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">디지털게임</div>
-                                    </div>
-                                </div>
-                                <div class="depth-category-group">
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">전체</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">보드게임</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">디지털게임</div>
+                                        <div class="depth-category-text">재가봉사</div>
                                     </div>
                                 </div>
                                 <div class="depth-category-group">
@@ -283,19 +263,39 @@
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">전체</div>
+                                        <div class="depth-category-text">전문봉사</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">보드게임</div>
+                                        <div class="depth-category-text">지역사회사봉사</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">디지털게임</div>
+                                        <div class="depth-category-text">금물품봉사</div>
+                                    </div>
+                                </div>
+                                <div class="depth-category-group">
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">해외봉사</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">헌혈</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">재능기부봉사</div>
                                     </div>
                                 </div>
                                 <div class="depth-category-group"></div>
