--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -288,67 +288,20 @@
                                         </div>
                                     </li>
 
-                                    <li class="history-item">
-                                        <div class="history-card">
-                                            <span class="history-card-date">2023.04.27 00:22</span>
-                                            <strong class="history-card-name">wish</strong>
-                                            <span class="history-amount">
-                                                <span class="number">1,800</span>
-                                                원 참여
-                                            </span>
-                                        </div>
-                                    </li>
-
-
-                                    <li class="history-item">
-                                        <div class="history-card">
-                                            <span class="history-card-date">2023.04.27 00:22</span>
-                                            <strong class="history-card-name">wish</strong>
-                                            <span class="history-amount">
-                                                <span class="number">1,800</span>
-                                                원 참여
-                                            </span>
-                                        </div>
-                                    </li>
-
-
-                                    <li class="history-item">
-                                        <div class="history-card">
-                                            <span class="history-card-date">2023.04.27 00:22</span>
-                                            <strong class="history-card-name">wish</strong>
-                                            <span class="history-amount">
-                                                <span class="number">1,800</span>
-                                                원 참여
-                                            </span>
-                                        </div>
-                                    </li>
-
-
                                 </ul>
-                                <div class="paging-wrapper">
-                                    <ul class="paging-wrap">
-                                        <li class="paging-prev-wrap" title="이전 페이지">
-                                            <div class="prev">
-                                                <svg viewBox="0 0 48 48">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path>
-                                                </svg>
-                                            </div>
-                                        </li>
-                                        <li title="1" class="paging-item-select" tabindex="0">
-                                            <a rel="nofollow">1</a>
-                                        </li>
-                                        <li title="2" class="paging-item" tabindex="0">
-                                            <a rel="nofollow">2</a>
-                                        </li>
-                                        <li title="다음 페이지" tabindex="0" class="paging-next" aria-disabled="false">
-                                            <div  class="next">
-                                                <svg viewBox="0 0 48 48">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path>
-                                                </svg>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                <div>
+                                    <div class="paging-modal" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
+<!--                                        <a class="changePage" style="color: black"><code><</code></a>-->
+<!--                                        <code id="currentPage">1</code>-->
+<!--                                        <a class="changePage" style="color: black"><code>2</code></a>-->
+<!--                                        <a class="changePage" style="color: black"><code>></code></a>-->
+                                    </div>
+<!--                                    <form name="pageForm">-->
+<!--                                        <input type="hidden">-->
+<!--                                        <input type="hidden">-->
+<!--                                    </form>-->
                                 </div>
+
                             </div>
                         </div>
                     </div>
