후원 상세보기 후원내역 페이징 기능구현 완료

--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -277,16 +277,16 @@
                                 <ul class="history-list">
 
 
-                                    <li class="history-item">
-                                        <div class="history-card">
-                                            <span class="history-card-date">2023.04.27 00:22</span>
-                                            <strong class="history-card-name">wish</strong>
-                                            <span class="history-amount">
-                                                <span class="number">1,800</span>
-                                                원 참여
-                                            </span>
-                                        </div>
-                                    </li>
+<!--                                    <li class="history-item">-->
+<!--                                        <div class="history-card">-->
+<!--                                            <span class="history-card-date">2023.04.27 00:22</span>-->
+<!--                                            <strong class="history-card-name">wish</strong>-->
+<!--                                            <span class="history-amount">-->
+<!--                                                <span class="number">1,800</span>-->
+<!--                                                원 참여-->
+<!--                                            </span>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
 
                                 </ul>
                                 <div>
@@ -397,6 +397,7 @@
     let memberDTO = [[${memberDTO}]];
     let supportRequestDTO = [[${supportRequestDTO}]];
 </script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/main/header.js"></script>
 <script src="/js/support/support-rice-modal.js"></script>
 <script src="/js/support/supportDetail.js"></script>
