--- a/src/main/resources/templates/customerCenter/inquiry-write.html
+++ b/src/main/resources/templates/customerCenter/inquiry-write.html
@@ -13,7 +13,7 @@
 
 <button id="open" >심봉사 문의하기</button>
 
-    <div class="main" style="display: none;">
+    <div class="main" style="display: none;" th:fragment="inqueryModal">
         <div class="main-layout">
             <div  class="main-container">
                 <div class="main-wrap">
